# vins-mobile-android-viz

./: .gitignore  README.md
vins-mobile/: gradle.properties
vins-mobile/app/: CMakeLists.txt  build.gradle
vins-mobile/app/libs/VINS-Mobile-master/: CMakeLists.txt
vins-mobile/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
vins-mobile/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/ceres-solver/jni/: Application.mk
vins-mobile/app/libs/VINS-Mobile-master/VINS_ios/: global_param.cpp  global_param.hpp
vins-mobile/app/libs/VINS-Mobile-master/VINS_ios/ObjectiveC/: ViewController.h
vins-mobile/app/libs/VINS-Mobile-master/VINS_ios/loop/: CMakeLists.txt  keyframe_database.cpp
vins-mobile/app/src/main/: AndroidManifest.xml
vins-mobile/app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp  ViewController.hpp
vins-mobile/app/src/main/cpp/jni/: nativelib.cpp
vins-mobile/app/src/main/cpp/visualize/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  native-lib.cpp  utils.cpp  utils.hpp  vertex.cpp  vertex.hpp
vins-mobile/app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/: MainActivity.java  VinsJNI.java  VisualizeView.java  VizActivity.java
vins-mobile/app/src/main/res/layout/: activity_main.xml  activity_viz.xml
vins-mobile/app/src/main/res/navigation/: nav_graph.xml
vins-mobile/app/src/main/res/values/: strings.xml
